@@ -687,7 +687,7 @@ router_parse_directory(const char *str)
 
   /* Now that we know the signature is okay, and we have a
    * publication time, cache the directory. */
-  if (directory_caches_dir_info(get_options()) &&
+  if (directory_caches_v1_dir_info(get_options()) &&
       !authdir_mode_v1(get_options()))
     dirserv_set_cached_directory(str, published_on, 0);
 
